--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,22 @@ add_executable(Zenyth WIN32
         src/Window.cpp
         include/Application.hpp
         src/Application.cpp
+        include/Core.hpp
+        include/Vertex.hpp
 )
+
+add_custom_target(copy_resources ALL
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/resources
+        ${CMAKE_BINARY_DIR}/resources
+        COMMENT "Copying resources to build directory"
+)
+
+add_dependencies(Zenyth copy_resources)
+
 
 target_compile_definitions(Zenyth PUBLIC UNICODE _UNICODE)
 
-target_link_libraries(Zenyth PUBLIC d3d12 dxgi)
+target_link_libraries(Zenyth PUBLIC d3d12 dxgi D3DCompiler.lib)
 
 xrepo_target_packages(Zenyth directx-headers glm)
