camera and DirectXtk12 integration wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ include(${CMAKE_BINARY_DIR}/xrepo.cmake)
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded")
 
 xrepo_package("directx-headers")
-xrepo_package("glm")
+xrepo_package("directxtk12")
 xrepo_package("directxtex")
 
 include_directories(include)
@@ -31,7 +31,15 @@ add_executable(Zenyth WIN32
         src/Buffers.cpp
         include/Texture.hpp
         src/Texture.cpp
+        include/Camera.hpp
+        src/Camera.cpp
 )
+
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+    target_compile_definitions(Zenyth PUBLIC DEBUG=1)
+elseif(CMAKE_BUILD_TYPE MATCHES Release)
+    target_compile_definitions(Zenyth PUBLIC DEBUG=0)
+endif()
 
 add_custom_target(copy_resources ALL
         COMMAND ${CMAKE_COMMAND} -E copy_directory
@@ -47,4 +55,4 @@ target_compile_definitions(Zenyth PUBLIC UNICODE _UNICODE)
 
 target_link_libraries(Zenyth PUBLIC d3d12 dxgi D3DCompiler.lib)
 
-xrepo_target_packages(Zenyth directx-headers glm directxtex)
+xrepo_target_packages(Zenyth directx-headers directxtk12 directxtex)
