--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -1,17 +1,29 @@
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS include/*.hpp src/*.cpp)
+
 add_executable(Sandbox WIN32
-        main.cpp
+        ${SOURCES}
 )
 
 target_include_directories(Sandbox PUBLIC ${CMAKE_SOURCE_DIR}/Core/include)
 target_include_directories(Sandbox PUBLIC ${CMAKE_SOURCE_DIR}/Sandbox)
 
+target_precompile_headers(Sandbox REUSE_FROM Core)
+
+
+if (CMAKE_GENERATOR MATCHES "Visual Studio")
+    # Visual Studio seems to have a different build directory structure
+    set(RESOURCES_BUILD_DIR ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/resources)
+else()
+    set(RESOURCES_BUILD_DIR ${CMAKE_BINARY_DIR}/resources)
+endif()
+
 # Copy resources to build directory
 add_custom_target(copy_resources ALL
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${CMAKE_SOURCE_DIR}/Sandbox/resources
-        ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/resources
+        ${RESOURCES_BUILD_DIR}
         COMMENT "Copying resources to build directory"
 )
 
