--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -7,6 +7,8 @@ file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp include/*.hpp)
 
 add_library(Core STATIC
         ${SOURCES}
+        include/Win32Application.hpp
+        src/Win32Application.cpp
 )
 
 target_include_directories(Core PUBLIC ${CMAKE_SOURCE_DIR}/Core/include)
