--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(Core STATIC
         ${SOURCES}
 )
 
+target_compile_features(Core PRIVATE cxx_std_20)
+
 target_include_directories(Core PUBLIC ${CMAKE_SOURCE_DIR}/Core/include)
 
 target_precompile_headers(Core PUBLIC include/pch.hpp)
@@ -18,8 +20,10 @@ target_link_libraries(Core
         Microsoft::DirectX-Headers
         DirectXTK12
         DirectXTex
+        d3d12
+        dxgi
+        D3DCompiler.lib
+        dxguid.lib
 )
-
-target_link_libraries(Core PUBLIC d3d12 dxgi D3DCompiler.lib dxguid.lib)
 
 target_compile_definitions(Core PUBLIC UNICODE _UNICODE)
