Refactor command management and renderer initialization - Introduced CommandAllocatorPool and CommandQueue for better command allocation and execution management. - Updated Minicraft and Renderer classes to utilize new command management structure. - Removed GetHardwareAdapter from Application class and integrated it into Renderer. - Enhanced resource management and synchronization in rendering pipeline.

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -47,4 +47,4 @@ target_link_libraries(Core
         ImGui
 )
 
-target_compile_definitions(Core PUBLIC UNICODE _UNICODE)
+target_compile_definitions(Core PUBLIC UNICODE _UNICODE NOMINMAX)
