--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ set(DXC_DIR "${CMAKE_SOURCE_DIR}/Core/Deps/dxc")
 # add subdirectories
 add_subdirectory(Core)
 add_subdirectory(Sandbox)
+add_subdirectory(ModelGallery)
 
